add send me a message from android

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <body>
         <h1>Code injection</h1>
         <button>Launch Native Code</button>
+        <h2> Messages from Android</h2>
+        <p id="demo">Can you replace me?</h2>
     </body>
     <!-- SCRIPTS -->
     <script src="./assets/js/custom.js"></script>
