--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Code Injection</title>
+        <title>Sending Data from Android Application to Webview</title>
         <!-- CSS -->
         <link rel="stylesheet" href="./assets/css/style.css">
     </head>
     <body>
-        <h1>Code injection</h1>
+        <h1>Sending Data from Android Application to Webview</h1>
         <button>Launch Native Code</button>
-        <h2> Messages from Android</h2>
+        <h2>Messages from Android</h2>
         <p id="demo">Can you replace me?</h2>
     </body>
     <!-- SCRIPTS -->
